Laid groundwork for tables inside NavPanel component

--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewListSidebarTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewListSidebarTableAndRows.scss
@@ -81,7 +81,7 @@
 	}
 
 	.list-sidebar-container__table__row__header {
-		// z-index must be more than table__data rows below do not overlap when scrolling
+		// z-index must be more than table__row__data rows below do not overlap when scrolling
 		z-index: 1;
 		position: -webkit-sticky;
 		position: sticky;
