--- a/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanel.scss
+++ b/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanel.scss
@@ -8,10 +8,11 @@
 	background-color: v.$default-theme-common-standard-border-background-color;
 	height: 100%;
 	width: v.$nav-panel-width;
-	
+
 	.top-container {
 		height: v.$nav-panel-top-container-height;
-		border-bottom: v.$nav-panel-top-container-border-width solid v.$mode-nav-panel-top-container-border-color-light;
+		border-bottom: v.$nav-panel-top-container-border-width solid
+			v.$mode-nav-panel-top-container-border-color-light;
 	}
 
 	.top-container__logo {
@@ -19,5 +20,11 @@
 		width: v.$nav-panel-width - 100;
 		margin: 0px auto;
 		padding-top: 10px;
+	}
+
+	.tables-container {
+		height: 90vh;
+		overflow-y: auto;
+		overflow-x: hidden;
 	}
 }
