Continued work on nav-panel css and made some tweaks to the tables for list-view and item-view

--- a/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanelTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanelTableAndRows.scss
@@ -3,6 +3,7 @@
 
 .nav-panel-table-component {
 	position: relative;
+	padding: 10px 0 0 10px;
 	width: v.$nav-panel-width;
 	font-size: v.$common-font-size;
 	font-family: Arial, Helvetica, sans-serif;
@@ -11,23 +12,23 @@
 	// ...and the outermost element for NavPanelTableRow component
 	.table__row,
 	.nav-panel-table-row-component {
-		padding: v.$common-list-row-padding;
-		height: v.$common-list-row-height;
-		color: v.$mode-common-weak-text-color-light;
+		height: 40px;
 	}
 
-	.table__row--empty {
-		height: v.$common-list-row-height + (v.$common-list-row-height * 0.5);
+	.table__empty-row {
+		height: v.$nav-panel-table-row-empty-height;
 	}
 
 	.table__row__header {
 		width: v.$nav-panel-width;
-		color: v.$mode-common-strong-text-color-light;
 		text-align: left;
 	}
 
 	.table__row__header__info {
 		cursor: pointer;
+	}
+	.table__row__header__info i {
+		padding-right: 8px;
 	}
 
 	.table__row__data {
@@ -44,16 +45,11 @@
 		text-overflow: ellipsis;
 	}
 
-	.table__row__data__overflow-container--completed-color {
-		color: v.$common-completed-color;
-	}
-
 	.table__row__data__overflow-container__info {
 		cursor: pointer;
 	}
 
 	.table__row__data__overflow-container__info__completed-icon {
 		margin-right: 5px;
-		color: v.$common-completed-color;
 	}
 }
