--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -483,10 +483,12 @@ $common-top-bar-search-bar-height: 28px;
 $common-top-bar-filter-sort-dropdown-content-container-height: 205px;
 $common-top-bar-filter-dropdown-content-container-for-bugs-height: 160px;
 $common-list-row-height: 50px;
+$common-list-row-empty-height: $common-list-row-height;
 $common-status-box-height: 27px;
 // Specific (i.e. used by specific component)
 $toggle-switch-height: 24px;
 $custom-checkbox-height: 13px;
+$nav-panel-table-row-empty-height: ($common-list-row-height / 6);
 $navbar-height: 56px;
 $navbar-account-button-height: $navbar-height;
 $hamburger-dropdown-option-height: 42px;
@@ -633,7 +635,6 @@ $common-form-input-text-padding: $common-form-input-text-top-bottom-padding
 $common-form-input-text-focus-padding: $common-form-input-text-focus-top-bottom-padding
 	$common-form-input-text-focus-left-right-padding;
 $common-top-bar-search-bar-padding: 8px;
-$common-list-row-padding: 0px 5px;
 // Specific (i.e. used by specific component)
 $navbar-button-text-container-padding: 0 14px 0 14px;
 $account-sidebar-padding-top: 32px;
@@ -677,8 +678,8 @@ $common-back-exit-icon-button-left-right: 20px;
 $navbar-breadcrumb-arrow-top: -2px;
 $navbar-breadcrumb-arrow-left: -2px;
 $navbar-hamburger-button-left: 10px;
-$list-view-top: $common-top-bar-top + $common-top-bar-height +
-	+ $common-top-bar-border-width;
+$list-view-top: $common-top-bar-top + $common-top-bar-height + +
+	$common-top-bar-border-width;
 $item-view-top: $list-view-top;
 $item-view-list-sidebar-top: $list-view-top;
 $item-view-top-bar-search-bar-left: 15px;
