Changed nav-panel to no longer use tables

--- a/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanel.scss
+++ b/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanel.scss
@@ -22,7 +22,7 @@
 		padding-top: 10px;
 	}
 
-	.tables-container {
+	.button-list-container {
 		height: 90vh;
 		overflow-y: auto;
 		overflow-x: hidden;
