--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewBugListTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewBugListTableAndRows.scss
@@ -20,7 +20,7 @@
 	}
 
 	.bug-list-table__row__data {
-		// Must be realtive so centing works for overflow-container
+		// Must be realtive so centing works for ellipsis-container
 		position: relative;
 		width: 50%;
 	}
