--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -505,6 +505,8 @@ $common-modal-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1),
 	-2px 2px 5px rgba(0, 0, 0, 0.1);
 $common-form-input-box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.01),
 	inset -1px 1px 1px rgba(0, 0, 0, 0.01);
+$common-button-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.01),
+	-1px 1px 1px rgba(0, 0, 0, 0.01);
 
 //==============
 // Border-width
@@ -571,9 +573,11 @@ $common-form-input-text-focus-padding: $common-form-input-text-focus-top-bottom-
 	$common-form-input-text-focus-left-right-padding;
 $common-top-bar-search-bar-padding: 8px;
 // Specific (i.e. used by specific component)
-$nav-panel-table-padding-left-right: 5px;
-$nav-panel-table-row-header-info-padding-left-right: 10px;
-$nav-panel-table-row-data-padding-left: $nav-panel-table-padding-left-right + $nav-panel-table-row-header-info-padding-left-right;
+$nav-panel-button-list-padding-left-right: 10px;
+$nav-panel-button-list-main-item-padding-left-right: 10px;
+$nav-panel-button-list-main-item-icon-padding-left: 8px;
+$nav-panel-button-list-sub-item-padding-left: $nav-panel-button-list-main-item-padding-left-right +
+	$nav-panel-button-list-main-item-icon-padding-left + 14; // 14 is the size of a main icon at the current font size
 $navbar-button-text-container-padding: 0 14px 0 14px;
 $account-sidebar-padding-top: 32px;
 $account-sidebar-padding-left-right: 18px;
@@ -622,9 +626,6 @@ $common-status-box-width: 110px;
 // Specific (i.e. used by specific component)
 $toggle-switch-width: 52px;
 $nav-panel-width: 250px;
-$nav-panel-table-width: $nav-panel-width;
-$nav-panel-table-row-width: $nav-panel-table-width - ($nav-panel-table-padding-left-right * 2);
-$nav-panel-table-row-data-overflow-container-width: $nav-panel-table-row-width - $nav-panel-table-row-data-padding-left;
 $navbar-account-button-width: 130px;
 $navbar-breadcrumb-button-arrow-top-bottom-width: 30px;
 $navbar-breadcrumb-button-arrow-left-width: 20px;
