--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -577,7 +577,7 @@ $nav-panel-button-list-padding-left-right: 10px;
 $nav-panel-button-list-main-item-padding-left-right: 10px;
 $nav-panel-button-list-main-item-icon-padding-right: 10px;
 $nav-panel-button-list-sub-item-padding-left: $nav-panel-button-list-main-item-padding-left-right +
-	$nav-panel-button-list-main-item-icon-padding-right + 14; // 14 is the size of a main icon at the current font size
+	$nav-panel-button-list-main-item-icon-padding-right + 5; // 5 was chosen by eyeing what looked good
 $navbar-button-text-container-padding: 0 14px 0 14px;
 $account-sidebar-padding-top: 32px;
 $account-sidebar-padding-left-right: 18px;
